--- a/setup-data/concat_data.ipynb
+++ b/setup-data/concat_data.ipynb
@@ -564,10 +564,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>intent</th>\n",
+       "      <th>mapped_tables</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>RETRIEVE_RESERVATIONS</td>\n",
+       "      <td>reservations|flights</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>IDENTIFY_RECENT_CUSTOMERS</td>\n",
+       "      <td>reservations|customers</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CALCULATE_REVENUE</td>\n",
+       "      <td>reservations|transactions</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>FIND_PEAK_DEPARTURE_MONTHS</td>\n",
+       "      <td>flights</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>GROUP_AND_COUNT_CUSTOMERS_BY_AGE</td>\n",
+       "      <td>customers</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>IDENTIFY_AND_RANK_CUSTOMERS</td>\n",
+       "      <td>customers|reservations</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             intent              mapped_tables\n",
+       "0             RETRIEVE_RESERVATIONS       reservations|flights\n",
+       "1         IDENTIFY_RECENT_CUSTOMERS     reservations|customers\n",
+       "2                 CALCULATE_REVENUE  reservations|transactions\n",
+       "3        FIND_PEAK_DEPARTURE_MONTHS                    flights\n",
+       "4  GROUP_AND_COUNT_CUSTOMERS_BY_AGE                  customers\n",
+       "5       IDENTIFY_AND_RANK_CUSTOMERS     customers|reservations"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table_mapping = pd.read_csv(f\"{PATH}intent_to_table_mapping.csv\")\n",
+    "table_mapping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['RETRIEVE_RESERVATIONS', 'IDENTIFY_RECENT_CUSTOMERS',\n",
+       "       'CALCULATE_REVENUE', 'FIND_PEAK_DEPARTURE_MONTHS',\n",
+       "       'GROUP_AND_COUNT_CUSTOMERS_BY_AGE', 'IDENTIFY_AND_RANK_CUSTOMERS',\n",
+       "       'FIND_AIRCRAFT_BY_RANGE', 'LOCATE_NEAREST_AIRPORT',\n",
+       "       'CHECK_TIMEZONE_DIFFERENCE', 'COMPARE_AIRCRAFT_MODELS',\n",
+       "       'CHECK_SEAT_ASSIGNMENT', 'RETRIEVE_BOOKING_DETAILS',\n",
+       "       'FIND_FLIGHT_INFORMATION', 'ANALYZE_BOOKING_TRENDS',\n",
+       "       'CHECK_FLIGHT_STATUS', 'FIND_FLIGHT_ROUTES',\n",
+       "       'INQUIRE_SEAT_AVAILABILITY', 'ANALYZE_FLIGHT_PATTERNS',\n",
+       "       'CHECK_TICKET_DETAILS', 'RETRIEVE_PASSENGER_INFO',\n",
+       "       'FIND_CAR_RENTAL_OPTIONS', 'ANALYZE_BOOKING_PATTERNS',\n",
+       "       'FIND_HOTEL_OPTIONS', 'CHECK_HOTEL_AVAILABILITY',\n",
+       "       'GET_TRIP_RECOMMENDATIONS', 'PLAN_ITINERARY'], dtype=object)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "intent = pd.read_csv(f\"{PATH}new_prompt_intents.csv\")\n",
+    "intent[\"intent\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(\"../data/json/extra_mapping.json\", \"r\") as f:\n",
+    "    extra_mapp = json.load(f)\n",
+    "\n",
+    "# # Konversi JSON ke format yang sesuai untuk DataFrame\n",
+    "data_for_df = []\n",
+    "for intent, mapped_tables in extra_mapp.items():    \n",
+    "    data_for_df.append({\"intent\": intent, \"mapped_tables\": mapped_tables})\n",
+    "\n",
+    "df_map = pd.DataFrame(data_for_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>intent</th>\n",
+       "      <th>mapped_tables</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>FIND_HOTEL_OPTIONS</td>\n",
+       "      <td>hotels</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>RETRIEVE_BOOKING_DETAILS</td>\n",
+       "      <td>bookings</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>ANALYZE_BOOKING_TRENDS</td>\n",
+       "      <td>bookings</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>INQUIRE_SEAT_AVAILABILITY</td>\n",
+       "      <td>flights|seats</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>ANALYZE_BOOKING_PATTERNS</td>\n",
+       "      <td>ticket_flights|car_rentals</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>COMPARE_AIRCRAFT_MODELS</td>\n",
+       "      <td>airports_data|aircrafts_data</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>PLAN_ITINERARY</td>\n",
+       "      <td>hotels|car_rentals|trip_recommendations</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       intent                            mapped_tables\n",
+       "18         FIND_HOTEL_OPTIONS                                   hotels\n",
+       "7    RETRIEVE_BOOKING_DETAILS                                 bookings\n",
+       "9      ANALYZE_BOOKING_TRENDS                                 bookings\n",
+       "12  INQUIRE_SEAT_AVAILABILITY                            flights|seats\n",
+       "17   ANALYZE_BOOKING_PATTERNS               ticket_flights|car_rentals\n",
+       "5     COMPARE_AIRCRAFT_MODELS             airports_data|aircrafts_data\n",
+       "21             PLAN_ITINERARY  hotels|car_rentals|trip_recommendations"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_map.to_csv(f\"{PATH}new_mapping.csv\", index=False)\n",
+    "df_map.sample(7)"
+   ]
   }
  ],
  "metadata": {
