get data & remove schema

--- a/setup-data/concat_data.ipynb
+++ b/setup-data/concat_data.ipynb
@@ -787,6 +787,161 @@
     "df_map.to_csv(f\"{PATH}new_mapping.csv\", index=False)\n",
     "df_map.sample(7)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Download DB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Data from table 'aircrafts_data':\n",
+      "Columns: ['aircraft_code', 'model', 'range']\n",
+      "('773', 'Boeing 777-300', 11100)\n",
+      "('763', 'Boeing 767-300', 7900)\n",
+      "('SU9', 'Sukhoi Superjet-100', 3000)\n",
+      "('320', 'Airbus A320-200', 5700)\n",
+      "('321', 'Airbus A321-200', 5600)\n",
+      "\n",
+      "Data from table 'airports_data':\n",
+      "Columns: ['airport_code', 'airport_name', 'city', 'coordinates', 'timezone']\n",
+      "('ATL', 'Hartsfield-Jackson Atlanta International Airport', 'Atlanta', '[33.6407, -84.4277]', 'America/New_York')\n",
+      "('PEK', 'Beijing Capital International Airport', 'Beijing', '[40.0799, 116.6031]', 'Asia/Shanghai')\n",
+      "('DXB', 'Dubai International Airport', 'Dubai', '[25.2532, 55.3657]', 'Asia/Dubai')\n",
+      "('LAX', 'Los Angeles International Airport', 'Los Angeles', '[33.9416, -118.4085]', 'America/Los_Angeles')\n",
+      "('HND', 'Tokyo Haneda Airport', 'Tokyo', '[35.5494, 139.7798]', 'Asia/Tokyo')\n",
+      "\n",
+      "Data from table 'boarding_passes':\n",
+      "Columns: ['ticket_no', 'flight_id', 'boarding_no', 'seat_no']\n",
+      "('0060005435212351', 30625, 1, '2D')\n",
+      "('0060005435212386', 30625, 2, '3G')\n",
+      "('0060005435212381', 30625, 3, '4H')\n",
+      "('0060005432211370', 30625, 4, '5D')\n",
+      "('0060005435212357', 30625, 5, '11A')\n",
+      "\n",
+      "Data from table 'bookings':\n",
+      "Columns: ['book_ref', 'book_date', 'total_amount']\n",
+      "('00000F', '2024-03-20 01:21:03.561731+00:00', 265700)\n",
+      "('000012', '2024-03-29 07:11:03.561731+00:00', 37900)\n",
+      "('000068', '2024-04-30 12:36:03.561731+00:00', 18100)\n",
+      "('000181', '2024-04-25 11:37:03.561731+00:00', 131800)\n",
+      "('0002D8', '2024-04-22 19:49:03.561731+00:00', 23600)\n",
+      "\n",
+      "Data from table 'flights':\n",
+      "Columns: ['flight_id', 'flight_no', 'scheduled_departure', 'scheduled_arrival', 'departure_airport', 'arrival_airport', 'status', 'aircraft_code', 'actual_departure', 'actual_arrival']\n",
+      "(1185, 'QR0051', '2024-05-26 03:59:03.561731-04:00', '2024-05-26 09:04:03.561731-04:00', 'BSL', 'BKK', 'Scheduled', '319', None, None)\n",
+      "(3979, 'MU0066', '2024-05-10 08:59:03.561731-04:00', '2024-05-10 11:44:03.561731-04:00', 'SHA', 'CUN', 'Scheduled', 'CR2', None, None)\n",
+      "(4739, 'QF0126', '2024-05-21 06:39:03.561731-04:00', '2024-05-21 08:24:03.561731-04:00', 'SHA', 'AMS', 'Scheduled', '763', None, None)\n",
+      "(5502, 'LX0136', '2024-05-28 03:59:03.561731-04:00', '2024-05-28 05:29:03.561731-04:00', 'OSL', 'PRG', 'Scheduled', '763', None, None)\n",
+      "(6938, 'IB0075', '2024-05-20 06:34:03.561731-04:00', '2024-05-20 07:29:03.561731-04:00', 'OSL', 'RGN', 'Scheduled', 'SU9', None, None)\n",
+      "\n",
+      "Data from table 'seats':\n",
+      "Columns: ['aircraft_code', 'seat_no', 'fare_conditions']\n",
+      "('319', '2A', 'Business')\n",
+      "('319', '2C', 'Business')\n",
+      "('319', '2D', 'Business')\n",
+      "('319', '2F', 'Business')\n",
+      "('319', '3A', 'Business')\n",
+      "\n",
+      "Data from table 'ticket_flights':\n",
+      "Columns: ['ticket_no', 'flight_id', 'fare_conditions', 'amount']\n",
+      "('0060005432159776', 30625, 'Business', 42100)\n",
+      "('0060005435212351', 30625, 'Business', 42100)\n",
+      "('0060005435212386', 30625, 'Business', 42100)\n",
+      "('0060005435212381', 30625, 'Business', 42100)\n",
+      "('0060005432211370', 30625, 'Business', 42100)\n",
+      "\n",
+      "Data from table 'tickets':\n",
+      "Columns: ['ticket_no', 'book_ref', 'passenger_id']\n",
+      "('9880005432000987', '06B046', '8149 604011')\n",
+      "('9880005432000988', '06B046', '8499 420203')\n",
+      "('9880005432000989', 'E170C3', '1011 752484')\n",
+      "('9880005432000990', 'E170C3', '4849 400049')\n",
+      "('9880005432000991', 'F313DD', '6615 976589')\n",
+      "\n",
+      "Data from table 'car_rentals':\n",
+      "Columns: ['id', 'name', 'location', 'price_tier', 'start_date', 'end_date', 'booked']\n",
+      "(1, 'Europcar', 'Basel', 'Economy', '2024-04-14', '2024-04-11', 0)\n",
+      "(2, 'Avis', 'Basel', 'Luxury', '2024-04-10', '2024-04-20', 0)\n",
+      "(3, 'Hertz', 'Zurich', 'Midsize', '2024-04-10', '2024-04-07', 0)\n",
+      "(4, 'Sixt', 'Bern', 'SUV', '2024-04-20', '2024-04-26', 0)\n",
+      "(5, 'Budget', 'Lucerne', 'Compact', '2024-04-01', '2024-04-19', 0)\n",
+      "\n",
+      "Data from table 'hotels':\n",
+      "Columns: ['id', 'name', 'location', 'price_tier', 'checkin_date', 'checkout_date', 'booked']\n",
+      "(1, 'Hilton Basel', 'Basel', 'Luxury', '2024-04-22', '2024-04-20', 0)\n",
+      "(2, 'Marriott Zurich', 'Zurich', 'Upscale', '2024-04-14', '2024-04-21', 0)\n",
+      "(3, 'Hyatt Regency Basel', 'Basel', 'Upper Upscale', '2024-04-02', '2024-04-20', 0)\n",
+      "(4, 'Radisson Blu Lucerne', 'Lucerne', 'Midscale', '2024-04-24', '2024-04-05', 0)\n",
+      "(5, 'Best Western Bern', 'Bern', 'Upper Midscale', '2024-04-23', '2024-04-01', 0)\n",
+      "\n",
+      "Data from table 'trip_recommendations':\n",
+      "Columns: ['id', 'name', 'location', 'keywords', 'details', 'booked']\n",
+      "(1, 'Basel Minster', 'Basel', 'landmark, history', 'Visit the historic Basel Minster, a beautiful Gothic cathedral.', 0)\n",
+      "(2, 'Kunstmuseum Basel', 'Basel', 'art, museum', 'Explore the extensive art collection at the Kunstmuseum Basel.', 0)\n",
+      "(3, 'Zurich Old Town', 'Zurich', 'history, architecture', \"Take a stroll through the charming streets of Zurich's Old Town.\", 0)\n",
+      "(4, 'Lucerne Chapel Bridge', 'Lucerne', 'landmark, history', 'Walk across the iconic Chapel Bridge in Lucerne.', 0)\n",
+      "(5, 'Bern Bear Park', 'Bern', 'wildlife, park', \"Visit the Bern Bear Park and see the city's famous bears.\", 0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sqlite3\n",
+    "import requests\n",
+    "import os\n",
+    "\n",
+    "def download_sqlite_db(url, local_filename='travel.sqlite'):\n",
+    "    # Download the file\n",
+    "    with requests.get(url, stream=True) as r:\n",
+    "        r.raise_for_status()\n",
+    "        with open(local_filename, 'wb') as f:\n",
+    "            for chunk in r.iter_content(chunk_size=8192):\n",
+    "                f.write(chunk)\n",
+    "    return local_filename\n",
+    "\n",
+    "def connect_to_sqlite_db(db_file):\n",
+    "    # Connect to the SQLite database\n",
+    "    conn = sqlite3.connect(db_file)\n",
+    "    return conn\n",
+    "\n",
+    "def display_table_data(conn, table_name, limit=5):\n",
+    "    cursor = conn.cursor()\n",
+    "    cursor.execute(f\"SELECT * FROM {table_name} LIMIT {limit}\")\n",
+    "    columns = [description[0] for description in cursor.description]\n",
+    "    rows = cursor.fetchall()\n",
+    "\n",
+    "    print(f\"\\nData from table '{table_name}':\")\n",
+    "    print(\"Columns:\", columns)\n",
+    "    for row in rows:\n",
+    "        print(row)\n",
+    "\n",
+    "# URL of the SQLite database\n",
+    "url = \"https://storage.googleapis.com/benchmarks-artifacts/travel-db/travel2.sqlite\"\n",
+    "\n",
+    "db_file = download_sqlite_db(url)\n",
+    "\n",
+    "conn = connect_to_sqlite_db(db_file)\n",
+    "\n",
+    "cursor = conn.cursor()\n",
+    "cursor.execute(\"SELECT name FROM sqlite_master WHERE type='table';\")\n",
+    "tables = cursor.fetchall()\n",
+    "\n",
+    "for table in tables:\n",
+    "    table_name = table[0]\n",
+    "    display_table_data(conn, table_name)\n",
+    "\n",
+    "conn.close()\n"
+   ]
   }
  ],
  "metadata": {
