--- a/003sql-agent/pattern3.ipynb
+++ b/003sql-agent/pattern3.ipynb
@@ -1045,6 +1045,153 @@
         "print(\"=\"*50)\n",
         "print(response['output'])"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Additional"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 96,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sqlalchemy import create_engine, MetaData, Table, Column, inspect\n",
+        "\n",
+        "def extract_schema(db_url):\n",
+        "    engine = create_engine(db_url)\n",
+        "    inspector = inspect(engine)\n",
+        "    schema_info = []\n",
+        "    for table_name in inspector.get_table_names():\n",
+        "        columns = inspector.get_columns(table_name)\n",
+        "        schema_info.append(f\"Table: {table_name}\")\n",
+        "        for column in columns:\n",
+        "            schema_info.append(f\"  - {column['name']} ({column['type']})\")\n",
+        "    return \"\\n\".join(schema_info)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 97,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "schema = extract_schema(\"sqlite:///../data/travel.sqlite\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 100,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from langchain_core.prompts import PromptTemplate\n",
+        "from langchain_core.output_parsers import StrOutputParser\n",
+        "\n",
+        "prompt_template = \"\"\"\n",
+        "You are an AI assistant that generates SQL queries based on user requests.\n",
+        "You have access to the following database schema:\n",
+        "{schema}\n",
+        "Based on this schema, generate a SQL query to answer the following question:\n",
+        "{question}\n",
+        "SQL Query:\n",
+        "\"\"\"\n",
+        "prompt = PromptTemplate(\n",
+        "    input_variables=[\"schema\", \"question\"],\n",
+        "    template=prompt_template,\n",
+        ")\n",
+        "\n",
+        "sql_gen = prompt | llm | StrOutputParser()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 102,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "What a fascinating question!\n",
+            "\n",
+            "To answer this, we'll need to join several tables and perform some calculations. Here's the SQL query:\n",
+            "```sql\n",
+            "WITH \n",
+            "  -- Get hotel bookings by non-locals (incoming tourists)\n",
+            "  incoming_tourists AS (\n",
+            "    SELECT \n",
+            "      EXTRACT(MONTH FROM h.checkin_date) AS month,\n",
+            "      h.location AS city,\n",
+            "      COUNT(*) AS num_incoming_tourists\n",
+            "    FROM \n",
+            "      hotels h\n",
+            "      JOIN bookings b ON h.id = b.book_ref\n",
+            "      JOIN tickets t ON b.book_ref = t.book_ref\n",
+            "      WHERE \n",
+            "        t.passenger_id NOT LIKE '%@%'  -- assume '@' is the local email domain\n",
+            "    GROUP BY \n",
+            "      EXTRACT(MONTH FROM h.checkin_date), h.location\n",
+            "  ),\n",
+            "  \n",
+            "  -- Get flight bookings by locals (outgoing tourists)\n",
+            "  outgoing_tourists AS (\n",
+            "    SELECT \n",
+            "      EXTRACT(MONTH FROM f.scheduled_departure) AS month,\n",
+            "      f.arrival_airport AS city,\n",
+            "      COUNT(*) AS num_outgoing_tourists\n",
+            "    FROM \n",
+            "      flights f\n",
+            "      JOIN bookings b ON f.flight_id = b.book_ref\n",
+            "      JOIN tickets t ON b.book_ref = t.book_ref\n",
+            "      WHERE \n",
+            "        t.passenger_id LIKE '%@%'  -- assume '@' is the local email domain\n",
+            "    GROUP BY \n",
+            "      EXTRACT(MONTH FROM f.scheduled_departure), f.arrival_airport\n",
+            "  ),\n",
+            "  \n",
+            "  -- Calculate the ratio of incoming to outgoing tourists\n",
+            "  tourist_ratio AS (\n",
+            "    SELECT \n",
+            "      i.month, i.city, \n",
+            "      i.num_incoming_tourists / o.num_outgoing_tourists AS ratio\n",
+            "    FROM \n",
+            "      incoming_tourists i\n",
+            "      JOIN outgoing_tourists o ON i.month = o.month AND i.city = o.city\n",
+            "  )\n",
+            "\n",
+            "SELECT \n",
+            "  month, city, ratio\n",
+            "FROM \n",
+            "  tourist_ratio\n",
+            "ORDER BY \n",
+            "  month, city;\n",
+            "```\n",
+            "Here's a brief explanation of the query:\n",
+            "\n",
+            "1. We use Common Table Expressions (CTEs) to calculate the number of incoming tourists (hotel bookings by non-locals) and outgoing tourists (flight bookings by locals) for each month and city.\n",
+            "2. We join the `hotels`, `bookings`, `tickets`, and `flights` tables to extract the relevant information.\n",
+            "3. We use the `EXTRACT` function to extract the month from the `checkin_date` and `scheduled_departure` columns.\n",
+            "4. We calculate the ratio of incoming to outgoing tourists for each month and city.\n",
+            "5. Finally, we select the month, city, and ratio columns and order the results by month and city.\n",
+            "\n",
+            "This query should give you the desired output, showing the ratio of incoming tourists to outgoing tourists for each month and city. You can then analyze the results to identify any significant seasonal patterns.\n"
+          ]
+        }
+      ],
+      "source": [
+        "query = \"For each city, calculate the ratio of incoming tourists (based on hotel bookings by non-locals) to outgoing tourists (based on flight bookings by locals) for each month. Identify any significant seasonal patterns.\"\n",
+        "\n",
+        "response = sql_gen.invoke({\n",
+        "    \"schema\":schema,\n",
+        "    \"question\": query\n",
+        "})\n",
+        "\n",
+        "print(response)"
+      ]
     }
   ],
   "metadata": {
